--- a/package.json
+++ b/package.json
@@ -23,4 +23,15 @@
   "engines": {
     "node": ">=6.9.5"
   },
+  "devDependencies": {
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
